Page is nearly finished

--- a/career.html
+++ b/career.html
@@ -46,23 +46,23 @@
                 <button class="navbar-toggler text-white border-0 px-0" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
-                    <i class="fas fa-bars"></i>
+                    <i class="fas fa-bars px-1"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fw-bolder">
-                        <li class="nav-item px-lg-2">
-                            <a class="nav-link text-uppercase text-white" href="whatwedo.html">
+                        <li class="nav-item ps-lg-3">
+                            <a class="nav-link text-uppercase text-white pe-lg-0" href="whatwedo.html">
                                 what we do
                             </a>
                         </li>
-                        <li class="nav-item px-lg-2">
-                            <a class="nav-link text-uppercase text-white" href="about.html">about us</a>
+                        <li class="nav-item ps-lg-3">
+                            <a class="nav-link text-uppercase text-white pe-lg-0" href="about.html">about us</a>
                         </li>
-                        <li class="nav-item px-lg-2">
-                            <a class="nav-link text-uppercase text-white" href="career.html">careers</a>
+                        <li class="nav-item ps-lg-3">
+                            <a class="nav-link text-uppercase text-white pe-lg-0" href="career.html">careers</a>
                         </li>
-                        <li class="nav-item px-lg-2">
-                            <a class="nav-link text-uppercase text-white" href="contact.html">contact</a>
+                        <li class="nav-item ps-lg-3">
+                            <a class="nav-link text-uppercase text-white pe-lg-0" href="contact.html">contact</a>
                         </li>
                     </ul>
                 </div>
@@ -72,8 +72,8 @@
             <div class="container">
                 <div class="row">
                     <div class='col-lg-6'>
-                        <p class="text-white fw-bold mb-0 mb-md-2">Career</p>
-                        <h2 class="header-content-heading lh-1 text-light-blue fw-bold mb-4">
+                        <p class="text-white fw-bold mb-0 mb-md-2">Careers</p>
+                        <h2 class="lh-1 text-light-blue fw-bold mb-4">
                             Passionate about IT?
                             <br class="d-none d-lg-block" />
                             Come and work for us.
@@ -91,11 +91,17 @@
             <div class="row">
                 <div class="col-12 col-lg-8">
                     <h2 class="text-orange fw-bolder mb-lg-5 d-none d-lg-block">
-                        Porem ipsum dolor sit amet consectetur adipisicing elit. Ducimus impedit itaque ad.
+                        Proin nec mauris quis neque
+                        <br>
+                        iaculis placerat. Proin sollicitudin
+                        <br>
+                        suscipit sagittis.
                     </h2>
 
                     <p class="text-orange fw-bolder mb-lg-5 d-block d-lg-none">
-                        Porem ipsum dolor sit amet consectetur adipisicing elit. Ducimus impedit itaque ad.
+                        Proin nec mauris quis neque
+                        iaculis placerat. Proin sollicitudin
+                        suscipit sagittis.
                     </p>
                     <p class="text-blue mb-5">
                         Nullam fermentum nunc orci, eu pharetra enim molestie
@@ -133,7 +139,7 @@
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi nihil ullam reprehenderit
                             dolores quibusdam impedit deleniti doloremque
                         </p>
-                        <button class="btn btn-view-detail bg-light-blue text-white rounded-0 fw-bold">
+                        <button class="btn btn-view-detail bg-light-blue text-white rounded-0 fw-bold lh-1">
                             VIEW DETAILS
                         </button>
                     </div>
@@ -145,7 +151,7 @@
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi nihil ullam reprehenderit
                             dolores quibusdam impedit deleniti doloremque
                         </p>
-                        <button class="btn btn-view-detail bg-light-blue text-white rounded-0 fw-bold">
+                        <button class="btn btn-view-detail bg-light-blue text-white rounded-0 fw-bold lh-1">
                             VIEW DETAILS
                         </button>
                     </div>
