--- a/contact.html
+++ b/contact.html
@@ -39,44 +39,47 @@
     <section class="contact-header px-4 px-lg-0">
 
         <nav class="header-nav navbar navbar-expand-lg navbar-dark">
-            <div class="container px-0 px-lg-2">
+            <div class="container">
                 <a class="navbar-brand me-0" href="home.html">
                     <img src="./assets/GS_logo_Colour_for_blue_background.png" alt="logo" class="logo">
                 </a>
-                <button class="navbar-toggler text-white border-0 px-1" type="button" data-bs-toggle="collapse"
+                <button class="navbar-toggler text-white border-0 px-0" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
-                    <i class="fas fa-bars"></i>
+                    <i class="fas fa-bars px-1"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fw-bolder">
-                        <li class="nav-item px-lg-2">
-                            <a class="nav-link text-uppercase text-white" href="whatwedo.html">
+                        <li class="nav-item ps-lg-3">
+                            <a class="nav-link text-uppercase text-white pe-lg-0" href="whatwedo.html">
                                 what we do
                             </a>
                         </li>
-                        <li class="nav-item px-lg-2">
-                            <a class="nav-link text-uppercase text-white" href="about.html">about us</a>
+                        <li class="nav-item ps-lg-3">
+                            <a class="nav-link text-uppercase text-white pe-lg-0" href="about.html">about us</a>
                         </li>
-                        <li class="nav-item px-lg-2">
-                            <a class="nav-link text-uppercase text-white" href="career.html">careers</a>
+                        <li class="nav-item ps-lg-3">
+                            <a class="nav-link text-uppercase text-white pe-lg-0" href="career.html">careers</a>
                         </li>
-                        <li class="nav-item px-lg-2">
-                            <a class="nav-link text-uppercase text-white" href="contact.html">contact</a>
+                        <li class="nav-item ps-lg-3">
+                            <a class="nav-link text-uppercase text-white pe-lg-0" href="contact.html">contact</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <div class="contact-header-content text-white py-md-4">
-            <p class="d-block d-md-none text-white fw-bolder">Contact us</p>
+
+        <div class="header-content text-white py-md-4">
+            <div class="container d-block d-md-none">
+                <p class="text-white fw-bolder">Contact us</p>
+            </div>
         </div>
     </section>
     <!-- Section Header end  -->
 
-    <section class="py-4 p-md-5 px-4 px-lg-0">
-        <form class="contact-page-form">
-            <div class="container p-0">
+    <section class="section-contact-form px-4 px-lg-0">
+        <div class="container">
+            <form class="form">
                 <h3 class="text-blue fw-bold mb-4">Arrange an inital, no obligation chat.</h3>
                 <p class="text-blue d-none d-lg-block">
                     Fields marked with an <span class="text-danger">*</span> are required
@@ -118,23 +121,23 @@
                         <label for="message" class="form-label text-blue">Message</label>
                         <textarea class="form-control rounded-0 mb-5 mb-lg-0" id="message" rows="10"></textarea>
                     </div>
-                    <p class="text-blue d-block d-lg-none">
+                    <p class="text-blue d-block d-lg-none mb-0">
                         Fields marked with an <span class="text-danger">*</span> are required
                     </p>
                 </div>
                 <div class="d-flex flex-column flex-lg-row justify-content-between pt-5">
                     <div>
-                        <p class="fw-bolder text-blue">Geidans Solutions</p>
-                        <p class="text-blue">Address line 1</p>
-                        <p class="text-blue">Address line 2</p>
-                        <p class="text-blue">Address line 3</p>
+                        <p class="fw-bolder text-blue mb-2">Geidans Solutions</p>
+                        <p class="text-blue mb-2">Address line 1</p>
+                        <p class="text-blue mb-2">Address line 2</p>
+                        <p class="text-blue mb-5 mb-lg-0">Address line 3</p>
                     </div>
                     <div>
-                        <p href="#" class="text-blue text-decoration-none d-block">
+                        <p href="#" class="text-blue text-decoration-none d-block mb-1 mb-lg-3">
                             <span><i class="fa fa-phone-alt"></i></span>
                             <span class="ms-2">+44 (0) 3333 444 151</span>
                         </p>
-                        <p href="#" class="text-blue decoration-none d-block">
+                        <p href="#" class="text-blue decoration-none d-block mb-0">
                             <i class="fas fa-envelope"></i>
                             <span class="ms-2">hello@geidans.co.uk</span>
                         </p>
@@ -143,14 +146,13 @@
                         <button class="btn btn-submit bg-orange px-5 fw-bolder text-white rounded-0">Submit</button>
                     </div>
                 </div>
-            </div>
-
-        </form>
+            </form>
+        </div>
 
     </section>
 
     <!-- Section Contact start -->
-    <section class="section-contact px-4 px-lg-0">
+    <section class="section-call-to-action px-4 px-lg-0">
         <div class="container">
             <div class="row">
                 <div class="col-md-7 d-none d-lg-block">
