--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
 </head>
 
 <body class="home-page">
-    <div class="d-none d-lg-block container-fluid bg-dark-blue py-2">
+    <div class="d-none d-lg-block container-fluid bg-dark-blue py-lg-2">
         <div class="page-top container d-flex justify-content-between align-items-center">
             <p class="mb-0 text-white">The software specialists solving everyday SME problems</p>
             <div class="page-top-social d-flex align-items-center">
@@ -38,9 +38,9 @@
     <!-- Section Header start  -->
     <section class="home-header px-4 px-lg-0">
 
-        <nav class="header-nav navbar navbar-expand-lg navbar-dark">
+        <nav class="header-nav navbar navbar-expand-lg navbar-dark py-lg-4">
             <div class="container">
-                <a class="navbar-brand me-0" href="home.html">
+                <a class="navbar-brand me-0 py-2" href="home.html">
                     <img src="./assets/GS_logo_Colour_for_blue_background.png" alt="logo" class="logo">
                 </a>
                 <button class="navbar-toggler text-white border-0 px-0" type="button" data-bs-toggle="collapse"
@@ -50,19 +50,19 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fw-bolder">
-                        <li class="nav-item px-lg-2">
-                            <a class="nav-link text-uppercase text-white" href="whatwedo.html">
+                        <li class="nav-item ps-lg-3">
+                            <a class="nav-link text-uppercase text-white pe-lg-0" href="whatwedo.html">
                                 what we do
                             </a>
                         </li>
-                        <li class="nav-item px-lg-2">
-                            <a class="nav-link text-uppercase text-white" href="about.html">about us</a>
+                        <li class="nav-item ps-lg-3">
+                            <a class="nav-link text-uppercase text-white pe-lg-0" href="about.html">about us</a>
                         </li>
-                        <li class="nav-item px-lg-2">
-                            <a class="nav-link text-uppercase text-white" href="career.html">careers</a>
+                        <li class="nav-item ps-lg-3">
+                            <a class="nav-link text-uppercase text-white pe-lg-0" href="career.html">careers</a>
                         </li>
-                        <li class="nav-item px-lg-2">
-                            <a class="nav-link text-uppercase text-white" href="contact.html">contact</a>
+                        <li class="nav-item ps-lg-3">
+                            <a class="nav-link text-uppercase text-white pe-lg-0" href="contact.html">contact</a>
                         </li>
                     </ul>
                 </div>
@@ -73,7 +73,7 @@
             <div class="container">
                 <div class="row">
                     <div class='col-12 col-md-6'>
-                        <h1 class="header-content-heading lh-1 fw-bold mb-3 mb-lg-4">
+                        <h1 class="lh-1 fw-bold mb-3 mb-lg-4">
                             Get the best
                             <br class="d-block d-lg-none" />
                             out of
@@ -150,10 +150,11 @@
     <!-- Section Feedback start -->
     <section class="section-feedback px-4 px-lg-0 bg-orange">
         <div class="container">
-            <div class="fw-bold text-white d-flex align-items-top mb-4 lh-1">
-                <h1 class="left-quote align-self-bottom d-block d-lg-none">&#8220;</h1>
+            <div class="fw-bold text-white d-flex align-items-top mb-4 lh-1 section-feedback-heading">
+                <h2 class="left-quote align-self-bottom d-block d-lg-none">&#8220;</h2>
                 <img src="./assets/Icon images/“.png" alt="quote" class="d-none d-lg-block">
-                <h2 class="section-review-heading fw-bold ms-lg-2 ">
+                <h2 class=" fw-bold ms-lg-2 ">
+
                     GS ynderstood our challenges
                     straight away<span class="right-quote">&#8221;</span>
                 </h2>
@@ -185,12 +186,12 @@
     <section class="section-inverted-basic px-4 px-lg-0 bg-light-grey">
         <div class="container">
             <div class="row">
-                <div class="col-12 col-lg-4 text-left mb-3 mb-md-0 pe-lg-0">
+                <div class="col-12 col-lg-4 text-left mb-3 mb-md-0">
                     <h2 class="text-blue fw-bold mb-2">Think Smarter.</h2>
                     <h2 class="text-blue fw-bold mb-2">Grow Faster.</h2>
                     <h2 class="text-blue fw-bold mb-2">Compete Harder.</h2>
                 </div>
-                <div class="col-12 col-lg-6 ps-lg-0">
+                <div class="col-12 col-lg-6">
                     <h4 class="text-dark fw-bolder d-none d-lg-block">
                         Why Us?
                     </h4>
@@ -230,10 +231,12 @@
                 </div>
             </div>
             <div class="row mb-4 mb-md-5">
-                <div class="col-lg-9 mx-auto d-flex flex-column align-items-center flex-md-row">
+                <div class="col-lg-4 d-flex justify-content-center justify-content-lg-end pe-lg-0">
                     <img class="me-0 me-lg-5" src="./assets/Icon images/Systems_icon.png" alt="systems-icon">
+                </div>
+                <div class="col-lg-6 ps-lg-2">
                     <div class="section-help-detail text-center text-md-start">
-                        <h2 class="fw-bolder section-icon-list-heading lh-1 text-blue mt-2 mt-lg-0 mb-4">
+                        <h2 class="fw-bolder section-icon-list-heading lh-1 text-blue mt-4 mt-lg-0 mb-4">
                             Getting your software systems to talk each other
                         </h2>
                         <p class="text-blue d-none d-md-block mb-3">
@@ -245,8 +248,11 @@
                 </div>
             </div>
             <div class="row mb-4 mb-md-5">
-                <div class="col-lg-9 mx-auto d-flex flex-column flex-md-row align-items-center">
+                <div class="col-lg-4 d-flex justify-content-center justify-content-lg-end pe-lg-0">
                     <img class="me-0 me-lg-5" src="./assets/Icon images/Building_icon.png" alt="systems-icon">
+
+                </div>
+                <div class="col-lg-6 ps-lg-2">
                     <div class="section-help-detail text-center text-md-start">
                         <h2 class="fw-bolder section-icon-list-heading lh-1 text-blue mt-2 mt-lg-0 mb-4">
                             Building software that suits your business
@@ -260,8 +266,10 @@
                 </div>
             </div>
             <div class="row mb-4 mb-md-5">
-                <div class="col-lg-9 mx-auto d-flex flex-column flex-md-row align-items-center">
+                <div class="col-lg-4 d-flex justify-content-center justify-content-lg-end pe-lg-0">
                     <img class="me-0 me-lg-5" src="./assets/Icon images/Move_icon.png" alt="systems-icon">
+                </div>
+                <div class="col-lg-6 ps-lg-2">
                     <div class="text-center text-md-start ">
                         <h2 class="fw-bolder section-icon-list-heading lh-1 text-blue mt-2 mt-lg-0 mb-4">What you need
                             to
@@ -275,8 +283,10 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-9 mx-auto d-flex flex-column flex-md-row align-items-center">
+                <div class="col-lg-4 d-flex justify-content-center justify-content-lg-end pe-lg-0">
                     <img class="me-0 me-lg-5" src="./assets/Icon images/Upgrade_icon.png" alt="systems-icon">
+                </div>
+                <div class="col-lg-6 ps-lg-2">
                     <div class="text-center text-md-start">
                         <h2 class="fw-bolder section-icon-list-heading lh-1 text-blue  mt-2 mt-lg-0">
                             Making current software good as new
@@ -328,9 +338,9 @@
             </div>
             <div class=" d-block d-md-none">
                 <div class="text-center mb-5">
-                    <span class="fs-3 fw-bolder text-orange me-2 lh-1">Dynamic.</span>
-                    <span class="fs-3 fw-bolder text-orange me-2 lh-1">Flexible.</span>
-                    <span class="fs-3 fw-bolder text-orange lh-1">Fast.</span>
+                    <h2 class="d-inline-block fw-bolder text-orange me-2 lh-1 mb-0">Dynamic.</h2>
+                    <h2 class="d-inline-block fw-bolder text-orange me-2 lh-1 mb-0">Flexible.</h2>
+                    <h2 class="d-inline-block fw-bolder text-orange lh-1 mb-0">Fast.</h2>
                 </div>
                 <div>
                     <p class="text-white mb-4">
@@ -363,13 +373,13 @@
                     </h3>
                 </div>
                 <div class="col-md-7 d-block d-lg-none">
-                    <h3 class="text-blue mb-2">
+                    <h4 class="text-blue mb-2">
                         Want to work better, grow faster and compete on a bigger playing field?
-                    </h3>
-                    <h3 class="text-blue fw-bolder lh-1 mb-0">
+                    </h4>
+                    <h4 class="text-blue fw-bolder lh-1 mb-0">
                         Give us a call on
                         <span class="d-block d-md-inline-block">+44 (0) 3333 444 151</span>
-                    </h3>
+                    </h4>
                 </div>
             </div>
         </div>
