--- a/team.html
+++ b/team.html
@@ -50,19 +50,19 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fw-bolder">
-                        <li class="nav-item px-lg-2">
-                            <a class="nav-link text-uppercase text-white" href="whatwedo.html">
+                        <li class="nav-item ps-lg-3">
+                            <a class="nav-link text-uppercase text-white pe-lg-0" href="whatwedo.html">
                                 what we do
                             </a>
                         </li>
-                        <li class="nav-item px-lg-2">
-                            <a class="nav-link text-uppercase text-white" href="about.html">about us</a>
+                        <li class="nav-item ps-lg-3">
+                            <a class="nav-link text-uppercase text-white pe-lg-0" href="about.html">about us</a>
                         </li>
-                        <li class="nav-item px-lg-2">
-                            <a class="nav-link text-uppercase text-white" href="career.html">careers</a>
+                        <li class="nav-item ps-lg-3">
+                            <a class="nav-link text-uppercase text-white pe-lg-0" href="career.html">careers</a>
                         </li>
-                        <li class="nav-item px-lg-2">
-                            <a class="nav-link text-uppercase text-white" href="contact.html">contact</a>
+                        <li class="nav-item ps-lg-3">
+                            <a class="nav-link text-uppercase text-white pe-lg-0" href="contact.html">contact</a>
                         </li>
                     </ul>
                 </div>
@@ -72,12 +72,12 @@
             <div class="container">
                 <div class="row">
                     <div class='col-md-6'>
-                        <p class="text-white fw-bold mb-3">Senior team</p>
+                        <p class="text-white fw-bold mb-0 mb-lg-2">Senior team</p>
                         <h2 class="header-content-heading lh-1 text-light-blue fw-bold">
                             Pullquote from the page
-                            <br class="d-xs-block d-md-none" />
+                            <br class="d-none d-md-block" />
                             can go in this space
-                            <br class="d-xs-none d-md-block" />
+                            <br class="d-none d-md-block" />
                             here.
                         </h2>
                     </div>
@@ -87,11 +87,11 @@
     </section>
     <!-- Section Header end  -->
     <!-- Section team card  -->
-    <section class="py-4 py-lg-5 px-4 px-lg-0 team-card">
+    <section class="section-team-images pb-4 pb-lg-5 px-4 px-lg-0 team-card">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-lg-4 mb-4 mb-lg-0">
-                    <div class="card border-0 mb-lg-4">
+                    <div class="card border-0">
                         <div class="card-top position-relative">
                             <img src="./assets/Teamportraits/Andrew_portrait.png" class="card-top-img w-100 h-100"
                                 alt="...">
@@ -114,7 +114,7 @@
                                 Technology is my hobby as well as my business. I just love it.
                             </p>
                             <a href="#" class="btn px-0">
-                                <span style="border-radius: 20px;" class="bg-dark-blue text-white px-2 py-1">
+                                <span class="rounded-circle bg-dark-blue text-white px-2 py-1">
                                     <i class="fab fa-linkedin-in"></i>
                                 </span>
                             </a>
@@ -144,7 +144,7 @@
                                 Jana makes everthing work better
                             </p>
                             <a href="#" class="btn px-0">
-                                <span style="border-radius: 20px;" class="bg-dark-blue text-white px-2 py-1">
+                                <span class="rounded-circle bg-dark-blue text-white px-2 py-1">
                                     <i class="fab fa-linkedin-in"></i>
                                 </span>
                             </a>
@@ -173,7 +173,7 @@
                                 The Geidans go-to guru for all technical and devlopment projects.
                             </p>
                             <a href="#" class="btn px-0">
-                                <span style="border-radius: 20px;" class="bg-dark-blue text-white px-2 py-1">
+                                <span class="rounded-circle bg-dark-blue text-white px-2 py-1">
                                     <i class="fab fa-linkedin-in"></i>
                                 </span>
                             </a>
