--- a/whatwedo.html
+++ b/whatwedo.html
@@ -43,26 +43,26 @@
                 <a class="navbar-brand me-0" href="home.html">
                     <img src="./assets/GS_logo_Colour_for_blue_background.png" alt="logo" class="logo">
                 </a>
-                <button class="navbar-toggler text-white border-0 px-1" type="button" data-bs-toggle="collapse"
+                <button class="navbar-toggler text-white border-0 px-0" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
-                    <i class="fas fa-bars px-0"></i>
+                    <i class="fas fa-bars px-1"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fw-bolder">
-                        <li class="nav-item px-lg-2">
-                            <a class="nav-link text-uppercase text-white" href="whatwedo.html">
+                        <li class="nav-item ps-lg-3">
+                            <a class="nav-link text-uppercase text-white pe-lg-0" href="whatwedo.html">
                                 what we do
                             </a>
                         </li>
-                        <li class="nav-item px-lg-2">
-                            <a class="nav-link text-uppercase text-white" href="about.html">about us</a>
+                        <li class="nav-item ps-lg-3">
+                            <a class="nav-link text-uppercase text-white pe-lg-0" href="about.html">about us</a>
                         </li>
-                        <li class="nav-item px-lg-2">
-                            <a class="nav-link text-uppercase text-white" href="career.html">careers</a>
+                        <li class="nav-item ps-lg-3">
+                            <a class="nav-link text-uppercase text-white pe-lg-0" href="career.html">careers</a>
                         </li>
-                        <li class="nav-item px-lg-2">
-                            <a class="nav-link text-uppercase text-white" href="contact.html">contact</a>
+                        <li class="nav-item ps-lg-3">
+                            <a class="nav-link text-uppercase text-white pe-lg-0" href="contact.html">contact</a>
                         </li>
                     </ul>
                 </div>
@@ -118,7 +118,7 @@
             <div class="row">
                 <div class="col-12 col-md-3">
                     <div class="card rounded-0">
-                        <img src="./assets/Icon images/Systems_icon.png" class="card-img-top" alt="...">
+                        <img src="./assets/Icon images/Systems_icon.png" class="card-img-top-sytems" alt="...">
                         <div class="card-body">
                             <h5 class="card-title text-blue mb-0">
                                 Getting your software systems to talk to each other
@@ -159,7 +159,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-12 col-lg-4 d-flex justify-content-center">
-                    <img src="./assets/Icon images/system.PNG" alt="system" class="software-icon mb-4 mb-lg-0">
+                    <img src="./assets/Icon images/Systems_icon.png" alt="system" class="software-icon mb-4 mb-lg-0">
                 </div>
                 <div class="col-12 col-lg-7">
                     <h3 class="text-blue fw-bold mb-5">
