--- a/whyus.html
+++ b/whyus.html
@@ -38,7 +38,7 @@
     <!-- Section Header start  -->
     <section class="whyus-header px-4">
 
-        <nav class="header-nav navbar navbar-expand-lg navbar-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container">
                 <a class="navbar-brand me-0" href="home.html">
                     <img src="./assets/GS_logo_Colour_for_blue_background.png" alt="logo" class="logo">
@@ -46,23 +46,23 @@
                 <button class="navbar-toggler text-white border-0 px-0" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
-                    <i class="fas fa-bars"></i>
+                    <i class="fas fa-bars px-1"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fw-bolder">
-                        <li class="nav-item px-lg-2">
-                            <a class="nav-link text-uppercase text-white" href="whatwedo.html">
+                        <li class="nav-item ps-lg-3">
+                            <a class="nav-link text-uppercase text-white pe-lg-0" href="whatwedo.html">
                                 what we do
                             </a>
                         </li>
-                        <li class="nav-item px-lg-2">
-                            <a class="nav-link text-uppercase text-white" href="about.html">about us</a>
+                        <li class="nav-item ps-lg-3">
+                            <a class="nav-link text-uppercase text-white pe-lg-0" href="about.html">about us</a>
                         </li>
-                        <li class="nav-item px-lg-2">
-                            <a class="nav-link text-uppercase text-white" href="career.html">careers</a>
+                        <li class="nav-item ps-lg-3">
+                            <a class="nav-link text-uppercase text-white pe-lg-0" href="career.html">careers</a>
                         </li>
-                        <li class="nav-item px-lg-2">
-                            <a class="nav-link text-uppercase text-white" href="contact.html">contact</a>
+                        <li class="nav-item ps-lg-3">
+                            <a class="nav-link text-uppercase text-white pe-lg-0" href="contact.html">contact</a>
                         </li>
                     </ul>
                 </div>
@@ -73,7 +73,7 @@
                 <div class="row">
                     <div class='col-md-6'>
                         <p class="text-white fw-bold mb-lg-2">Why us</p>
-                        <h2 class="header-content-heading lh-1 text-light-blue fw-bold mb-0">
+                        <h2 class="lh-1 text-light-blue fw-bold mb-0">
                             A Geidans Solutions
                             <br class="d-xs-none d-lg-block" />
                             gets the best out of
@@ -134,7 +134,6 @@
                     </p>
                 </div>
                 <div class="col-12 col-md-4 bg-orange ">
-
                     <section class="section-feedback pt-4 mb-0 d-none d-lg-block">
                         <div class="fw-bold text-white d-flex flex-lg-column align-items-top mb-4">
                             <h1 class="left-quote align-self-bottom d-block d-lg-none">&#8220;</h1>
@@ -144,7 +143,7 @@
                                 straight away<span class="right-quote">&#8221;</span>
                             </h2>
                         </div>
-                        <p class="text-blue mb-5 fw-light">
+                        <p class="text-blue mb-5 fw-normal">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ducimus eos ipsum tenetur
                             enim ut
                             excepturi accusamus veritatis dignissimos unde cupiditate eum, neque autem nisi nam velit
@@ -166,6 +165,38 @@
                     </section>
                 </div>
             </div>
+    </section>
+    <section class="section-feedback px-4 px-lg-0 bg-orange d-lg-none">
+        <div class="container">
+            <div class="fw-bold text-white d-flex align-items-top mb-4 lh-1 section-feedback-heading">
+                <h2 class="left-quote align-self-bottom d-block d-lg-none">&#8220;</h2>
+                <img src="./assets/Icon images/“.png" alt="quote" class="d-none d-lg-block">
+                <h2 class=" fw-bold ms-lg-2 ">
+
+                    GS ynderstood our challenges
+                    straight away<span class="right-quote">&#8221;</span>
+                </h2>
+            </div>
+            <p class="text-blue mb-5">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ducimus eos ipsum tenetur
+                enim ut
+                excepturi accusamus veritatis dignissimos unde cupiditate eum, neque autem nisi nam velit
+                blanditiis
+                similique voluptatem soluta. Mollitia atque tenetur temporibus provident numquam
+                perspiciatis sit?
+                Optio magnam dolorem aut odit nulla voluptatum eligendi voluptates ea hic, molestias, nemo
+                error
+                deleniti! Lorem ipsum dolor
+            </p>
+            <div class="d-flex mb-3">
+                <img src="./assets/Icon images/star_icon.png" alt="star" class="star-icon me-2 ">
+                <img src="./assets/Icon images/star_icon.png" alt="star" class="star-icon me-2 ">
+                <img src="./assets/Icon images/star_icon.png" alt="star" class="star-icon me-2 ">
+                <img src="./assets/Icon images/star_icon.png" alt="star" class="star-icon me-2 ">
+                <img src="./assets/Icon images/star-half.png" alt="star" class="star-icon-half">
+            </div>
+            <p class="text-white fw-bolder mb-0"> 4.5 on Google reviews</p>
+        </div>
     </section>
 
     <!-- Section Call to action start -->
