--- a/about.html
+++ b/about.html
@@ -46,23 +46,23 @@
                 <button class="navbar-toggler text-white border-0 px-0" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
-                    <i class="fas fa-bars"></i>
+                    <i class="fas fa-bars px-1"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fw-bolder">
-                        <li class="nav-item px-lg-2">
-                            <a class="nav-link text-uppercase text-white" href="whatwedo.html">
+                        <li class="nav-item ps-lg-3">
+                            <a class="nav-link text-uppercase text-white pe-lg-0" href="whatwedo.html">
                                 what we do
                             </a>
                         </li>
-                        <li class="nav-item px-lg-2">
-                            <a class="nav-link text-uppercase text-white" href="about.html">about us</a>
+                        <li class="nav-item ps-lg-3">
+                            <a class="nav-link text-uppercase text-white pe-lg-0" href="about.html">about us</a>
                         </li>
-                        <li class="nav-item px-lg-2">
-                            <a class="nav-link text-uppercase text-white" href="career.html">careers</a>
+                        <li class="nav-item ps-lg-3">
+                            <a class="nav-link text-uppercase text-white pe-lg-0" href="career.html">careers</a>
                         </li>
-                        <li class="nav-item px-lg-2">
-                            <a class="nav-link text-uppercase text-white" href="contact.html">contact</a>
+                        <li class="nav-item ps-lg-3">
+                            <a class="nav-link text-uppercase text-white pe-lg-0" href="contact.html">contact</a>
                         </li>
                     </ul>
                 </div>
@@ -73,13 +73,13 @@
                 <div class="row">
                     <div class='col-12 col-lg-6'>
                         <p class="text-white fw-bold mb-2">Our background</p>
-                        <h1 class="header-content-heading text-light-blue fw-bold mb-4">
+                        <h2 class="text-light-blue fw-bold mb-4">
                             Passionate about
                             <br class="d-xs-none d-md-block" />
                             empowering
                             <br class="d-xs-none d-md-block" />
                             small businesses
-                        </h1>
+                        </h2>
                     </div>
                 </div>
             </div>
@@ -87,7 +87,7 @@
     </section>
     <!-- Section Header end  -->
     <!-- Section solution start  -->
-    <section class="py-4 py-md-5 px-4 px-lg-0">
+    <section class="section-basic px-4 px-lg-0">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-lg-4 text-left mb-4">
