--- a/whatwedo.html
+++ b/whatwedo.html
@@ -159,7 +159,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-12 col-lg-4 d-flex justify-content-center">
-                    <img src="./assets/Icon images/Systems_icon.png" alt="system" class="software-icon mb-4 mb-lg-0">
+                    <img src="./assets/update.png" alt="system" class="software-icon-update mb-4 mb-lg-0">
                 </div>
                 <div class="col-12 col-lg-7">
                     <h3 class="text-blue fw-bold mb-5">
@@ -218,7 +218,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-12 col-lg-4 d-flex justify-content-center">
-                    <img src="./assets/Icon images/move-light.PNG" alt="move" class="software-icon mb-4 mb-lg-0">
+                    <img src="./assets/move.png" alt="move" class="software-icon mb-4 mb-lg-0">
                 </div>
                 <div class="col-12 col-lg-7">
                     <h3 class="text-blue fw-bold mb-5">
